Fix alignment

--- a/trymito.io/styles/[slug].module.css
+++ b/trymito.io/styles/[slug].module.css
@@ -31,7 +31,7 @@
     padding: 5rem 20rem;
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .post_title {
